<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.td.lotteryanalyzer.core.LottoAnalyzer">
    <EditText
        android:id="@+id/txt_w1"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <EditText
        android:id="@+id/txt_w2"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w1"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/txt_w3"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w2"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/txt_w4"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w3"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/txt_w5"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w4"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/txt_w6"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w5"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/txt_w7"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/txt_w6"
        android:layout_marginLeft="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Search past draws to find out if you are a winner!"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_w1" />

    <TextView
        android:id="@+id/txt_n7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="37"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n6"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="40"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_label3"
        app:layout_constraintTop_toBottomOf="@+id/txt_n4"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txt_n5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="29"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n4"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_n6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="31"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n5"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_n3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="18"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n2"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_n4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="26"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n3"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="12"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/txt_n1"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="16dp"
        android:text="05"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_label2"
        android:layout_marginStart="96dp" />

    <TextView
        android:id="@+id/txt_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:text="Bonus"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_n1"
        android:layout_marginStart="144dp" />

    <TextView
        android:id="@+id/txt_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="LOTTO MAX &amp; EXTRA WINNING NUMBERS"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lable1"
        android:layout_marginStart="24dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="160dp"
        android:layout_height="113dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo649"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:onClick="to_649"
        />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="160dp"
        android:layout_height="113dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/lottomax"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:onClick="to_Max"
        />

    <TextView
        android:id="@+id/txt_lable1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="32dp"
        android:text="Draw Date:"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1"
        android:layout_marginStart="96dp" />

    <Button
        android:id="@+id/btn_trend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DrawTrend"
        android:layout_marginLeft="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_label3"
        android:layout_marginStart="70dp"
        android:onClick="to_DrawTrend"
        />

    <Button
        android:id="@+id/btn_analy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Analyzer"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_nb"
        app:layout_constraintLeft_toRightOf="@+id/btn_trend"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="32dp"
        android:onClick="to_Analyzer"
        />

    <TextView
        android:id="@+id/txt_uLb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Have your favorite numbers ever won?"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="147dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:entries="@array/dateMax_array"
        app:layout_constraintBottom_toTopOf="@+id/txt_label2"
        app:layout_constraintLeft_toRightOf="@+id/txt_lable1" />

    <Button
        android:id="@+id/btn_winSearch"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="GO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txt_w7"
        android:onClick="to_WinningSearch"
        />

</android.support.constraint.ConstraintLayout>
