...
        app:layout_constraintLeft_toRightOf="@+id/txt_label1"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelTitle1" />
    <TextView
        android:id="@+id/txt_wt2"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="06"
        app:layout_constraintLeft_toRightOf="@+id/txt_wt1"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelTitle1" />

    <TextView
...
        android:layout_marginTop="16dp"
        android:text="Bonus"
        app:layout_constraintLeft_toRightOf="@+id/txt_label4m"
        app:layout_constraintTop_toBottomOf="@+id/txt_label3" />

    <TextView
        android:id="@+id/txt_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="26 28 33 38 42 43 47"
        app:layout_constraintLeft_toRightOf="@+id/txt_date1"
...
